--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -22,7 +22,7 @@ post_limit: 5
 
 
 title : Helium Jekyll
-tagline: SOCIO-SPATIAL GEORGIA: Examining the Social Impacts of Large, Private Sector Urban Development in Batumi and Tbilisi
+tagline: SOCIO-SPATIAL GEORGIA
 author : 
   name : Antonio Trento
   site: https://lantoniotrento.github.io
