update team members

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -21,8 +21,8 @@ google_ad_client: ca-pub-9204963049240271
 post_limit: 5
 
 
-title : Helium Jekyll
-tagline: SOCIO-SPATIAL GEORGIA
+title : SOCIO-SPATIAL GEORGIA
+tagline: Examining the Social Impacts of Large, Private Sector Urban Development in Batumi and Tbilisi
 author : 
   name : Antonio Trento
   site: https://lantoniotrento.github.io
